# warlock-sentinel

./: .env.example  .gitignore  README.md  pyproject.toml  sentinel.yaml.example
warlock_sentinel/: __init__.py  cli.py  config.py  project_detector.py
warlock_sentinel/adapters/: __init__.py  base.py  flutter_adapter.py  react_adapter.py  registry.py
warlock_sentinel/core/: __init__.py  loop.py
warlock_sentinel/coverage/: __init__.py  parser.py
warlock_sentinel/dashboard/: __init__.py  generator.py
warlock_sentinel/generators/: __init__.py  test_generator.py
warlock_sentinel/templates/: __init__.py  angular_test.jinja2  base_prompt.jinja2  csharp_test.jinja2  fix_test.jinja2  flutter_test.jinja2  flutter_test_prompt.jinja2  nestjs_test.jinja2  nextjs_test.jinja2  react_test.jinja2  react_test_prompt.jinja2  vue_test.jinja2
